Python script to retrieve Twitter data and Dockerfile for the docker app implemented.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,16 @@ __pycache__/
 # C extensions
 *.so
 
+# IDE stuff
+.idea/
+.vscode/
+
+# Twitter's API keys
+.consumer_key
+.consumer_secret
+.access_secret
+.access_token
+
 # Distribution / packaging
 .Python
 build/
